--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <script src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CPromise.prototype.finally%2CTextDecoder%2CTextEncoder%2CObject.entries"></script>
         <script src="https://signin.bindid-sandbox.io/bindid-sdk/transmit-bind-id-sdk.js" defer></script>
         <meta name="xm-bind-id-client_id" content="76262c82.ca20e5b1.tid_19e1b6a7.bindid.io">
-        <meta name="xm-bind-id-redirect_uri" content="https://www.eltiempo.com/">
+        <meta name="xm-bind-id-redirect_uri" content="https://startbootstrap.com/solution/contact-forms">
         <button class='xm-bind-id-button'>Biometric Login</button>
         <meta name="xm-bind-id-client_id" content="76262c82.ca20e5b1.tid_19e1b6a7.bindid.io">
 ...
