--- a/index.html
+++ b/index.html
@@ -37,11 +37,7 @@
         <script src="https://signin.bindid-sandbox.io/bindid-sdk/transmit-bind-id-sdk.js" defer></script>
         <meta name="xm-bind-id-client_id" content="76262c82.ca20e5b1.tid_19e1b6a7.bindid.io">
         <meta name="xm-bind-id-redirect_uri" content="https://startbootstrap.com/solution/contact-forms">
-        <button class='xm-bind-id-button'>Biometric Login</button>
-        <meta name="xm-bind-id-client_id" content="76262c82.ca20e5b1.tid_19e1b6a7.bindid.io">
-...
-<script src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CPromise.prototype.finally%2CTextDecoder%2CTextEncoder%2CObject.entries"></script>
-<script src="https://signin.bindid-sandbox.io/bindid-sdk/transmit-bind-id-sdk.js" defer></script>                            
+                                   
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
@@ -58,7 +54,11 @@
                                         <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:required">Email Address is required.</div>
                                         <div class="invalid-feedback text-white" data-sb-feedback="emailAddress:email">Email Address Email is not valid.</div>
                                     </div>
-                                    <div class="col-auto"><button class="btn btn-primary btn-lg disabled" id="submitButton" type="submit">Submit</button></div>
+                                    <div class="col-auto"> <button class='xm-bind-id-button'>Biometric Login</button>
+        <meta name="xm-bind-id-client_id" content="76262c82.ca20e5b1.tid_19e1b6a7.bindid.io">
+...
+<script src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CPromise.prototype.finally%2CTextDecoder%2CTextEncoder%2CObject.entries"></script>
+<script src="https://signin.bindid-sandbox.io/bindid-sdk/transmit-bind-id-sdk.js" defer></script></div>
                                 </div>
                                 <!-- Submit success message-->
                                 <!---->
