--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                     <div class="text-center mb-3">
                                         <div class="fw-bolder">Form submission successful!</div>
                                         <p>To activate this form, sign up at</p>
-                                        <a class="text-white" href="https://startbootstrap.com/solution/contact-forms">https://startbootstrap.com/solution/contact-forms</a>
+                                        <a class="text-white" href="https://admin.bindid-sandbox.io/login">https://admin.bindid-sandbox.io/login</a>
                                     </div>
                                 </div>
                                 <!-- Submit error message-->
