--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
                         <div class="text-center text-white">
                             <!-- Page heading-->
                             <h1>Comience con Transmit aquí</h1>
+                            <script src="https://polyfill.io/v3/polyfill.min.js?features=Promise%2CPromise.prototype.finally%2CTextDecoder%2CTextEncoder%2CObject.entries"></script>
+<script src="https://signin.bindid-sandbox.io/bindid-sdk/transmit-bind-id-sdk.js" defer></script>
+                            <meta name="xm-bind-id-client_id" content="e84068da.c21d1be7.tid_19e1b6a7.bindid.io">
+<meta name="xm-bind-id-redirect_uri" content="https://admin.bindid-sandbox.io/login">
                             <!-- Signup form-->
                             <!-- * * * * * * * * * * * * * * *-->
                             <!-- * * SB Forms Contact Form * *-->
